# sg-filter

./: CMakeLists.txt
src/: sg-filter.cpp  sg-filter.hpp
test/: test-sg-filter.cpp
